--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon server2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "pritam pawar",
@@ -16,5 +17,8 @@
     "express": "^4.18.2",
     "openai": "^3.3.0",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
