--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@slack/web-api": "^6.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "node-cron": "^3.0.2",
     "openai": "^3.3.0",
     "sqlite3": "^5.0.2"
