--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - APP_PORT=3017
       - EXPRESS_SERVER_PORT=3016
-      - SLACK_SIGNING_SECRET=
-      - OPENAI_API_KEY=
-      - SLACK_BOT_TOKEN=
+      - SLACK_SIGNING_SECRET=c554294484a9ba86c93cf373c301777e
+      - OPENAI_API_KEY=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
+      - SLACK_BOT_TOKEN=xoxb-5547928716115-5551914937252-Ja9BdgG9ZtljMVbOpdZk3BpF
   
